Update .env.example with MinIO configuration values

--- a/env.example
+++ b/env.example
@@ -33,7 +33,8 @@ _AIRFLOW_WWW_USER_USERNAME=airflow
 _AIRFLOW_WWW_USER_PASSWORD=airflow
 
 # AWS S3 Configuration (for MinIO)
-AWS_ACCESS_KEY_ID${MINIO_ACCESS_KEY}
-AWS_SECRET_ACCESS_KEY=${MINIO_SECRET_ACCESS_KEY}
-AWS_ENDPOINT_URL_S3=${MINIO_HOST}:${MINIO_PORT}
-MLFLOW_S3_ENDPOINT_URL=${MINIO_HOST}:${MINIO_PORT}
+AWS_ACCESS_KEY_ID=minio
+AWS_SECRET_ACCESS_KEY=minio123
+AWS_ENDPOINT_URL_S3=http://localhost:9000
+MLFLOW_S3_ENDPOINT_URL=http://localhost:9000
+
