--- a/dockerfiles/fastapi/Dockerfile
+++ b/dockerfiles/fastapi/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.12-slim
 
 WORKDIR /app
 COPY . .
-COPY requirements.txt /requirements.txt
+# COPY requirements.txt /requirements.txt
 
 RUN apt-get update && apt-get install -y curl
 RUN pip install --upgrade pip
